--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <p id="output"></p>
     <div id="shape"></div>
     <div id="shape2"></div>
+    <div id="rodape">
+        <p>made by: bucho-op :)</p>
+        
+
+    </div>
     <script src="calccoluni.js"></script>
 
 </body>
